--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
+# Files for git to ignore
+#
+
+# files generated during transcriptome assembly and gene expression analysis
+*.amb
+*.ann
+*.bwt
+*.fai
+*.pac
+*.xa
+*.fq
+*.fa
+*.fastq
+*.fasta
+*.sa
+*.bam
+*.sam
+*.bai
+*.sai
+*.nhr
+*.nin
+*.nsq
+*.json
+*.bed
+*.keep
+*.zip
+
+# other files to ignore
+*.pdf
+*.out
+
+# python
 *.py[cod]
 
 # C extensions
